修复构建问题

--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,11 @@ base {
 }
 
 repositories {
-	maven {
-		// location of the maven that hosts JEI files since January 2023
-		name = "Jared's maven"
-		url = "https://maven.blamejared.com/"
-	}
+//	maven {
+//		// location of the maven that hosts JEI files since January 2023
+//		name = "Jared's maven"
+//		url = "https://maven.blamejared.com/"
+//	}
 	maven {
 		// location of a maven mirror for JEI files, as a fallback
 		name = "ModMaven"
@@ -44,7 +44,10 @@ dependencies {
 
 	// jei
 	//
-	modCompileOnlyApi("mezz.jei:jei-${mc_version}-fabric:${jei_version}")
+	modCompileOnlyApi("mezz.jei:jei-${mc_version}-fabric:${jei_version}") { // ??
+		exclude group: 'mezz.jei', module: 'jei-1.20.4-common-api'
+	}
+
 }
 
 processResources {
